[package]
name = "tlvc"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0"
zerocopy = "0.6"
byteorder = {version = "1.4", default-features = false}

[features]
default = []
alloc = []

[dev-dependencies]
tlvc-text = {path = "../text"}
